# secret_santa_roulette

./: .gitignore  CMakeLists.txt  README.md  main.cpp
etc/: doc  mail.pattern  send_mails.sh  users.pattern
lib/: roulette.hpp  user.hpp  users_file_parser.hpp
